# s5e

./: Cargo.toml  LICENSE
astrodynamics/: Cargo.toml
astrodynamics/src/: coordinate.rs  lib.rs  time.rs
c5a/: Cargo.toml
c5a-sim/: Cargo.toml
c5a-sim/src/: lib.rs  main.rs
c5a/src/: data.rs  driver.rs  environment.rs  estimation.rs  lib.rs  selector.rs
c5a/src/controller/: mtq.rs
c5a/src/driver/: actuator.rs  sensor.rs
c5a/src/environment/: sun_direction.rs
c5a/src/selector/: angular_velocity.rs  sun_direction.rs
c5a/src/transformer/: gnss_eci.rs
control-system/: Cargo.toml
control-system/control-system-macro/: Cargo.toml
control-system/control-system-macro/src/: lib.rs
control-system/src/: integrator.rs  lib.rs  ukf.rs
control-system/src/integrator/: euler.rs  rk4.rs
control-system/tests/: macro.rs
debug-s5e/: Cargo.toml
debug-s5e/src/: lib.rs
fsw-s5e/: Cargo.toml
fsw-s5e/src/: constants.rs  controller.rs  driver.rs  lib.rs  transformer.rs
fsw-s5e/src/controller/: mtq.rs  rw.rs
fsw-s5e/src/driver/: actuator.rs  sensor.rs
fsw-s5e/src/environment/: magnetic_field.rs
fsw-s5e/src/estimation/: attitude_determination.rs  direction_estimation.rs  orbit_determination.rs  timer.rs
polynomial/: Cargo.toml
polynomial/src/: lib.rs
s5e-lib/: Cargo.toml  build.rs
s5e-lib/src/: actuator.rs  earth.rs  lib.rs  orbit.rs  sat.rs  sensor.rs  spice_if.rs  sun.rs
s5e-port/: Cargo.toml
s5e-port/src/: lib.rs
src/: actuator.rs  constants.rs  lib.rs  main copy.rs  moon.rs  sensor.rs
tests/: .gitignore  bdot_convergence.rs  plot_bdot.py  pyproject.toml  sp-ideal-convergence.rs  sp-mtq-convergence.rs
tests/scripts/: plot_bdot.py  plot_bdot_fsw.py  plot_energy_comparison.py  plot_peak_decay.py  plot_sp_ideal.py  plot_sp_mtq.py  plot_sp_mtq_virtual.py
z_filter/: .gitattributes  Cargo.toml  README.md
z_filter/src/: lib.rs
z_filter/test-data-generator/: .flake8  README.md  generate_test_data.py  pyproject.toml  test_conditions.py
z_filter/test-data/bessel_5th_order/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/bessel_5th_order/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/butterworth_3rd_30hz/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/butterworth_3rd_30hz/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/cascade_4th_order/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/cascade_4th_order/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/custom_3rd_order/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/custom_3rd_order/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/custom_bandpass/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/custom_bandpass/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/elliptic_4th_order/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/elliptic_4th_order/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/highpass_20hz/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/highpass_20hz/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/low_sample_rate_filter/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/low_sample_rate_filter/signals/: impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/lowpass_100hz_prewarp/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/lowpass_100hz_prewarp/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/test-data/lowpass_50hz_zeta07/: a_coeffs.csv  b_coeffs.csv  config.json
z_filter/test-data/lowpass_50hz_zeta07/signals/: chirp5to200_xy.csv  impulse_xy.csv  noise_xy.csv  sine30_xy.csv  step_xy.csv
z_filter/tests/: integration_tests.rs
