[package]
name = "s5e"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
  "astrodynamics",
  "control-system",
  "debug-s5e",
  "c5a",
  "polynomial", 
  "s5e-lib",
  "s5e-port",
  "z_filter", "c5a-sim",
]

[dependencies]
s5e-lib = { path = "./s5e-lib" }
s5e-port = { path = "./s5e-port" }
c5a = { path = "./c5a" }
c5a-sim = { path = "./c5a-sim" }
debug-s5e = { path = "./debug-s5e" }
control-system = { path = "./control-system" }
astrodynamics = { path = "./astrodynamics" }
rust-spice = { git = "https://github.com/shunsuke-shimomura/rust-spice", branch = "main", features = ["download"] }
anyhow = "1.0.86"
chrono = "0.4"
igrf = "0.2.0"
nalgebra = "0.33.0"
rand = "0.8.5"
rand_distr = "0.4.3"
sgp4 = "2.2.0"
time = "0.3.36"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3.0"

[build-dependencies]
reqwest = { version = "0.12.22", features = ["stream"]}
tokio = { version = "1", features = ["rt", "macros"]}
futures-util = { version = "0.3"}
