[package]
name = "astrodynamics"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["chrono", "rand/std", "rand/std_rng", "rand_distr/std", "nalgebra/std", "anyhow/std"]   # 既定: std ON

[dependencies]
# nalgebra は no_std 可
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
# chrono / rand は std 時のみ
chrono = { version = "0.4", default-features = false, optional = true }   # NaiveDateTime等のみ使用
rand = { version = "0.8.5", default-features = false, optional = true }
rand_distr = { version = "0.4.3", default-features = false, optional = true }
anyhow = { version = "1", default-features = false }