[package]
name = "c5a-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
s5e-lib = { path = "../s5e-lib" }
c5a = { path = "../c5a" }
astrodynamics = { path = "../astrodynamics" }
debug-s5e = { path = "../debug-s5e" }
control-system = { path = "../control-system" }
s5e-port = { path = "../s5e-port" }
nalgebra = "0.33.0"
rand = "0.8.5"
rand_distr = "0.4.3"
sgp4 = "2.2.0"
chrono = "0.4"
time = "0.3.36"
igrf = "0.2.0"
