[project]
name = "test-data-generator"
version = "0.1.0"
description = "Test data generator for z_filter library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "black==22.12.0",
    "flake8==6.0.0",
]

[tool.black]
target-version = ['py38']
line-length = 100
exclude = ".venv"

